--- a/.github/workflows/manual_schedule.yml
+++ b/.github/workflows/manual_schedule.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow that is manually triggered
-
+# the automated part is inspired from https://fenilsonani.com/articles/python-github-actions-api-email-automation
 name: Manual workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
@@ -21,10 +21,12 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ inputs.name }}"
+      
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
         persist-credentials: false
+        
     - name: Setup Python 
       uses: actions/setup-python@v5
       with:
@@ -34,3 +36,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Run main script
+      run: python code/main.py
+
+    - name: Configure Git
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+    - name: Commit and Push Changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: | # modify the git add to match what is changed when running the script
+        git add ./*.xml
+        git add ./archive
+        git commit -m "Git Action: Add updated spam list [skip ci]" || echo "No changes to commit"
+        git push origin main
