--- a/.github/workflows/manual_schedule.yml
+++ b/.github/workflows/manual_schedule.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-        cache: 'pip' # caching pip dependencies
+        # cache: 'pip' # caching pip dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
