--- a/.github/workflows/manual_schedule.yml
+++ b/.github/workflows/manual_schedule.yml
@@ -17,11 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
-      
+    steps:      
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
@@ -31,7 +27,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-        # cache: 'pip' # caching pip dependencies
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -40,21 +36,21 @@ jobs:
       run: python code/main.py
 
     - name: Commit changes
-      uses: iarekylew00t/verified-bot-commit@v1
-      with:
-        message: "Git Action: Add updated spam list"
-        files: |
-          *.xml
-          archive
+      # uses: iarekylew00t/verified-bot-commit@v1
+      # with:
+      #   message: "Git Action: Add updated spam list"
+      #   files: |
+      #     *.xml
+      #     archive
     # - name: Configure Git
-    #   run: |
-    #     git config user.name "github-actions[bot]"
-    #     git config user.email "github-actions[bot]@users.noreply.github.com"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add ./*.xml
+        git add ./archive
+        git commit -m "Git Action: Add updated spam list [skip ci]" || echo "No changes to commit"
+        git push origin main
     # - name: Commit and Push Changes
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   run: | # modify the git add to match what is changed when running the script
-    #     git add ./*.xml
-    #     git add ./archive
-    #     git commit -m "Git Action: Add updated spam list [skip ci]" || echo "No changes to commit"
-    #     git push origin main
+      # run: | # modify the git add to match what is changed when running the script
