--- a/.github/workflows/manual_schedule.yml
+++ b/.github/workflows/manual_schedule.yml
@@ -20,8 +20,8 @@ jobs:
     steps:      
     - name: Checkout Repository
       uses: actions/checkout@v4
-      with:
-        persist-credentials: false
+      # with:
+      #   persist-credentials: false
         
     - name: Setup Python 
       uses: actions/setup-python@v5
