--- a/.github/workflows/manual_schedule.yml
+++ b/.github/workflows/manual_schedule.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   # This workflow contains a single job called "greet"
   run-main-script:
+    permissions:
+      contents: write
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -36,21 +38,21 @@ jobs:
       run: python code/main.py
 
     - name: Commit changes
-      uses: iarekylew00t/verified-bot-commit@v1
-      with:
-        message: "Git Action: Add updated spam list"
-        files: |
-          *.xml
-          archive
+      # uses: iarekylew00t/verified-bot-commit@v1
+      # with:
+      #   message: "Git Action: Add updated spam list"
+      #   files: |
+      #     *.xml
+      #     archive
     # - name: Configure Git
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # run: |
-      #   git config user.name "github-actions[bot]"
-      #   git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      #   git add ./*.xml
-      #   git add ./archive
-      #   git commit -m "Git Action: Add updated spam list"
-      #   git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add ./*.xml
+        git add ./archive
+        git commit -m "Git Action: Add updated spam list"
+        git push
     # - name: Commit and Push Changes
       # run: | # modify the git add to match what is changed when running the script
