--- a/.github/workflows/weekly_update.yml
+++ b/.github/workflows/weekly_update.yml
@@ -14,13 +14,13 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    steps:      
+    steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       # with:
       #   persist-credentials: false
-        
-    - name: Setup Python 
+
+    - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
@@ -39,6 +39,7 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add ./*.xml
+        git add ./*.version
         git add ./archive
         git commit -m "Git Action: Add updated spam list"
         git push
