--- a/.github/workflows/manual_schedule.yml
+++ b/.github/workflows/manual_schedule.yml
@@ -1,31 +1,23 @@
 # This is a basic workflow that is manually triggered
-# the automated part is inspired from https://fenilsonani.com/articles/python-github-actions-api-email-automation
-name: Manual workflow
+name: Manual update workflow
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+# Workflow runs when manually triggered using the UI or API.
 on:
-  # schedule:
-    # - cron: '0 12 * * 1' # runs every Monday at 12:00
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   run-main-script:
     permissions:
       contents: write
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:      
+    steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       # with:
       #   persist-credentials: false
-        
-    - name: Setup Python 
+
+    - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
@@ -38,21 +30,13 @@ jobs:
       run: python code/main.py
 
     - name: Commit changes
-      # uses: iarekylew00t/verified-bot-commit@v1
-      # with:
-      #   message: "Git Action: Add updated spam list"
-      #   files: |
-      #     *.xml
-      #     archive
-    # - name: Configure Git
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add ./*.xml
+        git add ./*.version
         git add ./archive
         git commit -m "Git Action: Add updated spam list"
         git push
-    # - name: Commit and Push Changes
-      # run: | # modify the git add to match what is changed when running the script
